--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,9 @@
         <meta name="description" content="Un mundo donde tambien el triple impacto es negocio">
         <meta name="robots" content="index,follow">  
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">'
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">'
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
         <link rel="stylesheet" href="/css/styles.css">
         <title>Adams Garden</title>
     </head>
@@ -24,26 +26,47 @@
             </div>
             <div class="navbar-right">
                 <ul>
+                    <li class="navbar-login"><a> Ingresá </a></li>
+
+                    <li class="user">
+                        <img src="/images/user.svg" alt="user" class="user" style="width: 30px;">
+                    </li>
+                    
                     <li class="navbar-shopping-cart"> 
                         <img src="/images/shoppingCar.svg" alt="shopping-card" style="width: 30px;" >
                         <div>2</div>
-                    </li>
-                    <li class="user">
-                        <img src="/images/user.svg" alt="user" class="user" style="width: 30px;">
                     </li>
                 </ul>
             </div>
         </nav>
         </header> 
+
+        
         <main>
-            <section>
-                <article>
-                    
-                </article>
-            </section>
+
         </main>
         <footer>
-
+            <div class="footer">
+                <article class="planta">
+                    <a href="/"><img src="/Images/allForPlants-01.svg" alt="Logo Adam's Garden"></a>
+                </article>
+            </div>
+            <div class="footer">
+                <article class="redes">
+                    <h5>Seguinos en Redes Sociales</h5>
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                </article>    
+            </div>
+            <div class="footer"><i class="fab fa-whatsapp"></i>
+                <h5>Contactanos</h5>
+            </div>    
+            <article>
+                <div class="footer">
+                    <p class="copyright">Copyright © 2022 </p>
+                </div> 
+            </article>
         </footer> 
     </body>
 </html>
