stable home with product Gallery

--- a/views/home.html
+++ b/views/home.html
@@ -31,20 +31,64 @@
                     <li class="user">
                         <img src="/images/user.svg" alt="user" class="user" style="width: 30px;">
                     </li>
-                    
                     <li class="navbar-shopping-cart"> 
-                        <img src="/images/shoppingCar.svg" alt="shopping-card" style="width: 30px;" >
+                        <a href="/carrito">
+                            <img src="/images/shoppingCar.svg" alt="shopping-card" style="width: 30px;" >
+                        </a>
                         <div>2</div>
                     </li>
                 </ul>
             </div>
         </nav>
         </header> 
-
-        
+        <section class="banner">
+            <div>
+                <img src="/Images/Banner.jpg" alt="Banner de ofertas">
+            </div>
+        </section>
         <main>
-
-        </main>
+            <section class="destacados">
+                <h3>DESTACADOS</h3>
+                <div class="productos">
+                    <article>
+                        <figure>
+                            <img src="/Images/limon.jpg" class="product_img" width="250px" alt="Limón 4 estaciones">
+                        </figure>
+                        <div class="main-article">
+                            <i class="fas fa-shopping-cart"></i>
+                            <div class="price-and-discount">
+                                <p class="price">$2.500</p>
+                            </div>
+                            <h4 class="description">Limón 4 estaciones</h4>
+                        </div>
+                    </article>
+                    <article>
+                        <figure>
+                            <img src="/Images/Jazmin-kimura.jpg" class="product_img" min-width="250px" alt="Jazmín Kimura">
+                        </figure>
+                        <div class="main-article">
+                            <i class="fas fa-shopping-cart"></i>
+                            <div class="price-and-discount">
+                                <p class="price">$1.500</p>
+                            </div>
+                            <h4 class="description">Jazmín Kimura</h4>
+                        </div>
+                    </article>
+                    <article>
+                        <figure>
+                            <img src="/Images/pino.jpg" class="product_img" width="250px" alt="Pino">
+                        </figure>
+                        <div class="main-article">
+                            <i class="fas fa-shopping-cart"></i>
+                            <div class="price-and-discount">
+                                <p class="price">$700</p>
+                            </div>
+                            <h4 class="description">Pino</h4>
+                        </div>
+                    </article>
+                </div>
+            </section>
+        </main>  
         <footer>
             <div class="footer">
                 <article class="planta">
