--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap');
 
 :root {
@@ -59,7 +58,6 @@ nav {
     margin-left: 12px;
   }
 
-
   .navbar-left ul li a,
   .navbar-right ul li a {
     text-decoration: none;
@@ -68,7 +66,6 @@ nav {
     border-radius: 8px;
 
   }
-
 
   .navbar-left ul li a:hover {
     border: 1px solid #8dd252;;
@@ -118,6 +115,89 @@ nav {
     margin-right: 12px;
 }
 
+
+/* BANNER */
+section.banner div{
+    width: 100%;
+    padding-top: 20px;
+}
+
+section.banner div img{
+    width: 100%;
+}
+
+
+
+/*MAIN*/
+
+main{
+    width: 90%;
+    margin: 0 auto;
+}
+
+main section h3{
+    margin: 20px 0px;
+}
+
+main section article{
+    background-color: #FFF;
+    margin: 10px 0;
+}
+
+main section article img{
+    width: 80%;
+    padding: 5px;
+}
+
+main section article figure {
+    display: flex;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 40px;
+    align-items: center;
+}
+
+.destacados h3{
+    color:#1a4809;
+    text-align: center;
+}
+
+article div.main-article{
+    width: 100%;
+    border-top: 1px solid #ebebeb;
+    padding: 15px;
+    position: relative;
+}
+
+article div.main-article i{
+    font-size: 16px;
+    text-align: center;
+    background-color: #FFF;
+    width: 35px;
+    height: 35px;
+    padding: 7px;
+    margin-bottom: 5px;
+    transition: all 600ms;
+}
+
+
+.price-and-discount{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+
+.price-and-discount .price {
+    width: 28%;
+    color:#1a4809;
+}
+
+article div.main-article h4{
+    margin-top: 20px;
+    color: #666;
+    display: none;
+}
 
 
 /* FOOTER */
@@ -180,6 +260,9 @@ footer p {
 }
 
 
+
+
+
   /*FOOTER*/
 
   footer {
@@ -201,29 +284,48 @@ footer section p.copyright {
     text-align: center;
 }
 
-@media (max-width: 680px){
-    .menu {
+
+
+
+@media (min-width: 480px){
+    /*MAIN*/
+    
+
+    main section div article {
+        width: 45%;
+        transition: box-shadow 600ms;
+    }
+
+    main section div article:hover {
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+
+    article div.main-article h4{
+        transition: display 600ms;
+    }
+    
+    article:hover div.main-article h4{
         display: block;
     }
-    .navbar-left ul {
-        display: none;
+
+    main section div.productos {
+        display:flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
     }
-    .user{
-        display: none;
+
+    .price {
+        width: 85px;
+        text-align: center;
     }
-    .productos-rel{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+
+    .description{
+        color:#1a4809;
+        text-align: center;
     }
-    .productos-rel img{
-        width: 60%;
-    }
-    div .info-izq {
-        margin-right: 5%;
-        margin-left: 0%;
-    }
+
+
 }
 
 
@@ -256,14 +358,16 @@ footer section p.copyright {
     }
 }
 
-@media (max-width: 480px){
-    .productos-rel{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+
+@media(min-width: 960px){
+    main section div article {
+        width: 23%;
     }
-    .productos-rel img{
-        width: 80%;
+
+    main section div.productos {
+        display:flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
     }
-}
+} 
