--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -305,6 +305,187 @@ div .cart-bottom {
 }
 
 
+/*DETALLE DE PRODUCTO*/
+h3{
+    text-align: center;
+    color: rgb(0, 75, 0);
+    font-style: oblique;
+    font-weight: bold;
+
+}
+
+.producto{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 10%;
+}
+div .info-izq{
+    display: flex;
+    flex-direction: row;
+    margin-right: 15%;
+}
+
+div .info-derecha{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 0%;
+    
+}
+div .info-derecha p{
+    font-size: var(--sm);
+    
+}
+div .info-derecha h4{
+    font-weight: bold;
+    color:rgb(0, 49, 0);
+    margin-top: 5%;
+    margin-bottom: 0%;
+    font-size: large;
+}
+
+div .info-derecha .price{
+    font-size: large;
+    margin-top: 0%;
+}
+
+div .info-derecha .description{
+    font-size: large;
+}
+
+div .form-compra form{
+    margin-top: 20%;
+    margin-bottom: 10%;
+    font-size: medium;
+}
+
+div .color-produc{
+    display: flex;
+    flex-direction: column;
+    margin-top: 5%;
+    margin-bottom: 15%;
+    font-size: medium;
+}
+
+div .tamaño-product{
+    display: flex;
+    flex-direction: column;
+    margin-top: 5%;
+    margin-bottom: 30%;
+    font-size: medium;
+}
+
+div .agregar-carrito button{
+    color:rgb(0, 75, 0);
+    background-color: #a1ee5d;
+    font-size: medium;
+    border-color: rgb(0, 75, 0);
+    border-radius: 5%;
+}
+div .agregar-carrito button:hover{
+    font-weight: bold;
+    background-color: #8dd252;
+}
+
+
+h3 .titulo-prod-rel{
+    text-align: center;
+}
+
+.productos-rel{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.productos-rel .price{
+    margin-left: 10%;
+    margin-bottom: 0%;
+    margin-top: 0%;
+}
+
+.productos-rel .description{
+    margin-left: 10%;
+    margin-top: 0%;
+    margin-bottom: 0%;
+    color:rgb(0, 75, 0);
+}
+
+
+.login {
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+  }
+  .form-container {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    width: 300px;
+  }
+  .logo {
+    width: 150px;
+    margin-bottom: 48px;
+    justify-self: center;
+    display: none;
+  }
+  .form {
+    display: flex;
+    flex-direction: column;
+  }
+  .form a {
+    color: var(--hospital-green);
+    font-size: var(--sm);
+    text-align: center;
+    text-decoration: none;
+    margin-bottom: 52px;
+  }
+  .label {
+    font-size: var(--sm);
+    font-weight: bold;
+    margin-bottom: 4px;
+  }
+  .input {
+    background-color: var(--text-input-field);
+    border: none;
+    border-radius: 8px;
+    height: 30px;
+    font-size: var(--md);
+    padding: 6px;
+    margin-bottom: 12px;
+  }
+  .input-email {
+    margin-bottom: 22px;
+  }
+  .primary-button {
+    background-color: var(--hospital-green);
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    width: 100%;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 50px;
+  }
+  .secondary-button {
+    background-color: var(--white);
+    border-radius: 8px;
+    border: 1px solid var(--hospital-green);
+    color: var(--hospital-green);
+    width: 100%;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 50px;
+  }
+  .login-button {
+    margin-top: 14px;
+    margin-bottom: 30px;
+  }
+
+
 /* FOOTER */
 
 footer {
@@ -386,12 +567,21 @@ footer section p.copyright {
 
 
 
-
+@media (max-width: 480px){
+    .productos-rel{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .productos-rel img{
+        width: 80%;
+    }
+}
 
 
 @media (min-width: 480px){
     /*MAIN*/
-    
 
     main section div article {
         width: 45%;
