stable sprint2 release

--- a/views/carrito.html
+++ b/views/carrito.html
@@ -26,7 +26,7 @@
             </div>
             <div class="navbar-right">
                 <ul>
-                    <li class="navbar-login"><a> Ingresá </a></li>
+                    <li class="navbar-login"><a href="/loggin"> Ingresá </a></li>
 
                     <li class="user">
                         <img src="/images/user.svg" alt="user" class="user" style="width: 30px;">
@@ -74,7 +74,7 @@
             <div class="cart-bottom">
                 <div class="total-price-container">
                     <div class="total-price">
-                        <p> Precio total : $2.500</p>
+                        <p> Precio total : $2.500 </p>
                     </div>
                 </div>
                 <div class="confirm-cart">
