--- a/views/detalle.html
+++ b/views/detalle.html
@@ -18,7 +18,7 @@
             <div class="navbar-left" >
                 <img src="/images/AdamsLogo.svg" alt="logo" class="logo">
                 <ul> 
-                    <li><a> Home </a></li>
+                    <li><a href="/"> Home </a></li>
                     <li><a> Productos </a></li>
                     <li><a> Marcas </a></li>
                     <li><a> Registro </a></li>
@@ -26,7 +26,7 @@
             </div>
             <div class="navbar-right">
                 <ul>
-                    <li class="navbar-login"><a> Ingresá </a></li>
+                    <li class="navbar-login"><a href="/loggin"> Ingresá </a></li>
 
                     <li class="user">
                         <img src="/images/user.svg" alt="user" class="user" style="width: 30px;">
@@ -46,6 +46,7 @@
                 <h3 class="nombre-producto">LIMÓN GÉNOVA 4 ESTACIONES</h3>
                 <div class="producto">
                 <div class="info-izq">
+                        
                         <figure>
                             <img src="/images/limon.jpg" class="product_img" width="120%" alt="Limon">
                         </figure>
