--- a/views/home.html
+++ b/views/home.html
@@ -26,8 +26,7 @@
             </div>
             <div class="navbar-right">
                 <ul>
-                    <li class="navbar-login"><a> Ingresá </a></li>
-
+                    <li class="navbar-login"><a href="/loggin"> Ingresá </a></li>
                     <li class="user">
                         <img src="/images/user.svg" alt="user" class="user" style="width: 30px;">
                     </li>
@@ -49,11 +48,14 @@
         <main>
             <section class="destacados">
                 <h3>DESTACADOS</h3>
-                <div class="productos">
+             
+                <div class="productos" >
                     <article>
+                        <a href="/detalle"> 
                         <figure>
                             <img src="/Images/limon.jpg" class="product_img" width="250px" alt="Limón 4 estaciones">
                         </figure>
+                        </a>
                         <div class="main-article">
                             <i class="fas fa-shopping-cart"></i>
                             <div class="price-and-discount">
@@ -62,6 +64,7 @@
                             <h4 class="description">Limón 4 estaciones</h4>
                         </div>
                     </article>
+           
                     <article>
                         <figure>
                             <img src="/Images/Jazmin-kimura.jpg" class="product_img" min-width="250px" alt="Jazmín Kimura">
