--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -412,10 +412,9 @@ h3 .titulo-prod-rel{
     color:rgb(0, 75, 0);
 }
 
-
 .login {
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     display: grid;
     place-items: center;
   }
@@ -424,18 +423,21 @@ h3 .titulo-prod-rel{
     grid-template-rows: auto 1fr auto;
     width: 300px;
   }
-  .logo {
-    width: 150px;
-    margin-bottom: 48px;
-    justify-self: center;
-    display: none;
+
+  /*loggin area  and regist area*/
+
+  .title {
+    font-size: var(--lg);
+    margin-bottom: 36px;
+    text-align: start;
   }
+
   .form {
     display: flex;
     flex-direction: column;
   }
   .form a {
-    color: var(--hospital-green);
+    color: #8dd252;
     font-size: var(--sm);
     text-align: center;
     text-decoration: none;
@@ -459,7 +461,7 @@ h3 .titulo-prod-rel{
     margin-bottom: 22px;
   }
   .primary-button {
-    background-color: var(--hospital-green);
+    background-color: #8dd252;
     border-radius: 8px;
     border: none;
     color: var(--white);
@@ -469,17 +471,30 @@ h3 .titulo-prod-rel{
     font-weight: bold;
     height: 50px;
   }
+
+  
   .secondary-button {
     background-color: var(--white);
     border-radius: 8px;
-    border: 1px solid var(--hospital-green);
-    color: var(--hospital-green);
+    border: 1px solid #8dd252;
+    color: #8dd252;
     width: 100%;
     cursor: pointer;
     font-size: var(--md);
     font-weight: bold;
     height: 50px;
   }
+
+  .secondary-button:hover {
+    border-radius: 8px;
+    width: 100%;
+    height: 50px;
+    font-weight: bold;
+    color: #f2f2f3;
+    background-color: #8dd252;
+
+  }
+
   .login-button {
     margin-top: 14px;
     margin-bottom: 30px;
