--- a/views/detalle.html
+++ b/views/detalle.html
@@ -125,7 +125,7 @@
         <footer>
             <div class="footer">
                 <article class="planta">
-                    <a href="/"><img src="/Images/allForPlants-01.svg" alt="Logo Adam's Garden"></a>
+                    <a href="/"><img src="/images/allForPlants-01.svg" alt="Logo Adam's Garden"></a>
                 </article>
             </div>
             <div class="footer">
