--- a/views/home.html
+++ b/views/home.html
@@ -5,8 +5,8 @@
         <meta name="description" content="Un mundo donde tambien el triple impacto es negocio">
         <meta name="robots" content="index,follow">  
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">'
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">'
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
         <link rel="stylesheet" href="/css/styles.css">
         <title>Adams Garden</title>
@@ -42,7 +42,7 @@
         </header> 
         <section class="banner">
             <div>
-                <img src="/Images/Banner.jpg" alt="Banner de ofertas">
+                <img src="/images/Banner.jpg" alt="Banner de ofertas">
             </div>
         </section>
         <main>
@@ -53,7 +53,7 @@
                     <article>
                         <a href="/detalle"> 
                         <figure>
-                            <img src="/Images/limon.jpg" class="product_img" width="250px" alt="Limón 4 estaciones">
+                            <img src="/images/limon.jpg" class="product_img" width="250px" alt="Limón 4 estaciones">
                         </figure>
                         </a>
                         <div class="main-article">
@@ -67,7 +67,7 @@
            
                     <article>
                         <figure>
-                            <img src="/Images/Jazmin-kimura.jpg" class="product_img" min-width="250px" alt="Jazmín Kimura">
+                            <img src="/images/Jazmin-kimura.jpg" class="product_img" min-width="250px" alt="Jazmín Kimura">
                         </figure>
                         <div class="main-article">
                             <i class="fas fa-shopping-cart"></i>
@@ -79,7 +79,7 @@
                     </article>
                     <article>
                         <figure>
-                            <img src="/Images/pino.jpg" class="product_img" width="250px" alt="Pino">
+                            <img src="/images/pino.jpg" class="product_img" width="250px" alt="Pino">
                         </figure>
                         <div class="main-article">
                             <i class="fas fa-shopping-cart"></i>
@@ -95,7 +95,7 @@
         <footer>
             <div class="footer">
                 <article class="planta">
-                    <a href="/"><img src="/Images/allForPlants-01.svg" alt="Logo Adam's Garden"></a>
+                    <a href="/"><img src="/images/allForPlants-01.svg" alt="Logo Adam's Garden"></a>
                 </article>
             </div>
             <div class="footer">
