--- a/views/registro.html
+++ b/views/registro.html
@@ -48,7 +48,7 @@
                   <form action="/" class="form">
 
                     <label for="email" class="label">Nombre</label>
-                    <input type="text" id="email" placeholder="aphx@xas.com" class="input input-email">
+                    <input type="text" id="email" placeholder="" class="input input-email">
             
                     <label for="email" class="label">Email</label>
                     <input type="text" id="email" placeholder="aphx@xas.com" class="input input-email">
