--- a/views/carrito.html
+++ b/views/carrito.html
@@ -57,7 +57,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="cart-table-image"><img src="/Images/limon.jpg" alt="Imagen de producto"></td>
+                        <td class="cart-table-image"><img src="/images/limon.jpg" alt="Imagen de producto"></td>
                         <td class="cart-table-description">Limón 4 estaciones</td>
                         <td class="cart-table-price">$2.500</td>
                         <td class="cart-table-quantity">
