--- a/views/home.html
+++ b/views/home.html
@@ -16,12 +16,11 @@
         <nav>  
             <img src="/images/menu.svg" alt="menu" class="menu"> 
             <div class="navbar-left" >
-                <img src="/images/AdamsLogo.svg" alt="logo" class="logo">
                 <ul> 
-                    <li><a> Home </a></li>
-                    <li><a> Productos </a></li>
-                    <li><a> Marcas </a></li>
-                    <li><a> Registro </a></li>
+                    <li><a href="/"> Home </a></li>
+                    <li><a href="/detalle"> Productos </a></li>
+                    <li><a href="/detalle"> Marcas </a></li>
+                    <li><a href="/registro"> Registro </a></li>
                 </ul>
             </div>
             <div class="navbar-right">
