--- a/views/registro.html
+++ b/views/registro.html
@@ -78,8 +78,8 @@
                     <i class="fab fa-instagram"></i>
                 </article>    
             </div>
-            <div class="footer"><i class="fab fa-whatsapp"></i>
-                <h5>Contactanos</h5>
+            <div class="footer">
+                <h5>Contactanos</h5><i class="fab fa-whatsapp"></i>
             </div>    
             <article>
                 <div class="footer">
