added a home location for logo

--- a/views/home.html
+++ b/views/home.html
@@ -16,6 +16,7 @@
         <nav>  
             <img src="/images/menu.svg" alt="menu" class="menu"> 
             <div class="navbar-left" >
+                <a href="/"> <img src="/images/AdamsLogo.svg" alt="logo" class="logo"></a>
                 <ul> 
                     <li><a href="/"> Home </a></li>
                     <li><a href="/detalle"> Productos </a></li>
